--- a/src/styles/sass/components/landing/_sponsors.sass
+++ b/src/styles/sass/components/landing/_sponsors.sass
@@ -1,7 +1,6 @@
 .sponsors
     &__container
         padding: 10rem 15rem
-        margin-bottom: -20rem;
         text-align: center
         @include respond(tab-land)
             padding: 2rem
